# knowledge-graph-rag

./: .env.example  .gitignore  AI Agents as Digital Twins_ The Complete Guide to AI Modeling.md  AI_TWINS_API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_CHECKPOINT_UPDATE.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: INDEX.md  README.md
docs/01-overview/: PRODUCT_REQUIREMENTS_DOCUMENT.md  README.md
docs/02-architecture/: NEO4J_VECTOR_GRAPH_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE_DESIGN.md
docs/03-implementation/: GOOGLE_ADK_INTEGRATION_CHECKPOINT.md  TECHNICAL_IMPLEMENTATION_DETAILS.md
docs/04-deployment/: DEPLOYMENT_GUIDE.md
docs/05-development/: DEVELOPMENT_SUMMARY.md
docs/06-api-reference/: agents.md
docs/07-guides/: AI_Digital_Twins_Best_Practices.md  agent_usage.md
docs/archive/: CLAUDE.md  DEVELOPMENT_CHECKPOINT.md  DEVELOPMENT_ESTIMATION.md
scripts/: test_graph_schema.py
src/kg_rag/: __init__.py
src/kg_rag/agents/: __init__.py  adk_agent.py  agent_orchestrator.py  knowledge_graph_agent.py  query_processor.py  rag_agent.py
src/kg_rag/ai_twins/: __init__.py  base_twin.py  expert_twin.py  persona_twin.py  process_automation_twin.py  twin_orchestrator.py  user_journey_twin.py
src/kg_rag/core/: config.py  exceptions.py  logger.py
src/kg_rag/graph_schema/: __init__.py  node_models.py  query_builder.py  relationship_models.py  schema_manager.py  schema_validator.py  vector_operations.py
src/kg_rag/mcp_servers/: __init__.py  base_mcp.py  knowledge_graph_mcp.py  orchestrator.py  vector_search_mcp.py
tests/test_agents/: __init__.py  test_adk_agent.py  test_agent_orchestrator.py  test_query_processor.py
